== Master

== 5.5.0

* yes, the version number jumped from  5.3.5 to 5.5.0
* Implemented "real time" mode

== 5.3.5

* Moved proxy support to explicit command line flags --http_proxy and https_proxy
* fixed two unused variables that were causing warnings under 1.9.3

== 5.3.4

* Incorporating sleep interval into Server#time_to_checkin?
* Added proxy support command line flags

== 5.3.3

* Sending embedded options to server for local & plugin overrides.
* Reading options for local plugins
* Added support for an account-specific public key (scout_rsa.pub)

== 5.3.2

* New --name="My Server" option to specify server name from the scout command.

== 5.3.1

* Write a log message if a full disk prevents Scout from creating a history file.

== 5.3.0

* Ping over http instead of https. All plan retrievals and check-ins are still SSL
* Added ability to post troubleshooting report back to scoutapp.com  

== 5.2.2

* More graceful handling of *rare* client_history.yaml corruption

== 5.2.1

* Added private-key based code signing
* Added local plugin overrides
* Added local ad-hoc plugins

== 5.1.5

* Added sleep interval directive. Agent will only sleep when used in non-interactive mode.

== 5.1.4

* Normalized header formats

== 5.1.3

* Added debug output when contact with server cannot be established
* Updated to json_pure 1.4.2

== 5.1.2

* Added backtrace to Plugin code compile errors

== 5.1.1

* Fixed Counter functionality for per-minute metrics

== 5.1.0

* Agent now reports data on initial install
* If history file is empty, Agent will resume normal checkin when it can write history file again (thx @jnewland)
* inclusion of counter functionality (thx @lindvall)

== 5.0.3

* fixed regression: Error when running `scout AGENT_KEY` without first running scout and manually entering the agent key 

== 5.0.2

* fixed silent failure when plugin didn't inherit from Scout::Plugin
* beefed up error reporting

== 5.0.1
