@@ -1,5 +1,7 @@
 == Master
 
+* Updating history on plugin timeouts 
+
 == 5.5.0
 
 * yes, the version number jumped from  5.3.5 to 5.5.0
